Mobile layout Fix mobile layout overflow issues in vectors and pre req grid

--- a/css/reset.css
+++ b/css/reset.css
@@ -27,11 +27,11 @@ footer, header, hgroup, menu, section {
 
 html {
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
 
 body {
 	line-height: 1;
-	/* height: 100vh; */
 	width: 100vw;
 	overflow-x: hidden;
 }
